// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListField component should render with no items and an "add" button 1`] = `
<div>
  <Button
    color="secondary"
    onClick={[Function]}
    size="sm"
    tag="button"
  >
    <i
      className="material-icons md-2"
    >
      add
    </i>
  </Button>
</div>
`;

exports[`ListField component should render with some items and an "add" button 1`] = `
<div>
  <Row
    className="mb-3 form-row"
    key="0"
    tag="div"
  >
    <Col
      className="flex-grow"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <InputField
        maxLength={100}
        name="item-0"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        required={true}
        type="text"
        value="foo"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Button
        color="secondary"
        onClick={[Function]}
        size="sm"
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2 text-danger"
        >
          delete
        </i>
      </Button>
    </Col>
  </Row>
  <Row
    className="mb-3 form-row"
    key="1"
    tag="div"
  >
    <Col
      className="flex-grow"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <InputField
        maxLength={100}
        name="item-1"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        required={true}
        type="text"
        value="bar"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Button
        color="secondary"
        onClick={[Function]}
        size="sm"
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2 text-danger"
        >
          delete
        </i>
      </Button>
    </Col>
  </Row>
  <Button
    color="secondary"
    onClick={[Function]}
    size="sm"
    tag="button"
  >
    <i
      className="material-icons md-2"
    >
      add
    </i>
  </Button>
</div>
`;

exports[`ListField component should render with the max number of items and no "add" button 1`] = `
<div>
  <Row
    className="mb-3 form-row"
    key="0"
    tag="div"
  >
    <Col
      className="flex-grow"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <InputField
        maxLength={100}
        name="item-0"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        required={true}
        type="text"
        value="foo"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Button
        color="secondary"
        onClick={[Function]}
        size="sm"
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2 text-danger"
        >
          delete
        </i>
      </Button>
    </Col>
  </Row>
  <Row
    className="mb-3 form-row"
    key="1"
    tag="div"
  >
    <Col
      className="flex-grow"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <InputField
        maxLength={100}
        name="item-1"
        onChange={[Function]}
        placeholder="Type something (limited to 100 characters)"
        required={true}
        type="text"
        value="bar"
      />
    </Col>
    <Col
      className="d-flex col-sm-auto"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Button
        color="secondary"
        onClick={[Function]}
        size="sm"
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2 text-danger"
        >
          delete
        </i>
      </Button>
    </Col>
  </Row>
</div>
`;
